# torchinspector

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  taxi_rnn_demand.py  tmp
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-core-observer-tensorboard-wrapper/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-RESEARCH.md  01-VALIDATION.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md  SKELETON.md
.planning/phases/02-layer-observer-activation-monitoring/: 01-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PLAN.md  02-RESEARCH.md  02-VALIDATION.md  03-PLAN.md
.planning/phases/09-pypi-release/: 01-PLAN.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: bench_overhead.py
docs/: api.md  conf.py  examples.md  faq.md  index.md  quickstart.md
examples/: cifar_stress_test.py  compile_test.py  diagnose.py  gradcam_mnist.py  hybrid_stress_test.py  mnist_cnn.py  run_hybrid.py  train_cnn.py  train_mnist.py
notebooks/: hybrid_stress_test.ipynb  taxi_rnn_colab.ipynb  torchinspector_colab_demo.ipynb
src/torchinspector/: __init__.py  dashboard.py  export.py  hooks.py  huggingface.py  inspector.py  lightning.py  monitor.py  utils.py
tests/: conftest.py  test_compile.py  test_export.py  test_hooks.py  test_huggingface.py  test_inspector.py  test_integration.py  test_lightning.py  test_monitor.py  test_real_networks.py  test_utils.py
tests/test_backends/: test_tensorboard.py
tests/test_collectors/: test_activation.py  test_batch_sensitivity.py  test_explain.py  test_feature_map.py  test_gradient.py  test_lr_scheduler.py  test_parameter.py  test_scalar.py  test_universal.py  test_weight_grad_ratio.py
(+99 files in other folders)
