[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchinspector"
version = "0.1.0"
description = "PyTorch training observation library — see inside your models"
readme = "README.md"
license = "MIT"
packages = [{include = "torchinspector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0"
numpy = ">=1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4"
mypy = "^1.8"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["captum", "captum.attr", "transformers", "matplotlib"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
