[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchinspector"
version = "0.2.0"
description = "PyTorch training observation library — see inside your models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
explain = ["captum", "matplotlib"]
hf = ["transformers"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["captum", "captum.attr", "transformers", "matplotlib"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
